<resources>
    <string name="app_name">SkyPass</string>
    <string name="home">Beranda</string>
    <string name="history">Riwayat</string>
    <string name="notification">Notifikasi</string>
    <string name="account">Akun</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_account">Account</string>
    <string name="text_edit_profile">Ubah Profile</string>
    <string name="text_settings_account">Pengaturan Akun</string>
    <string name="text_logout">Keluar</string>
    <string name="text_version">Version 1.1.0</string>
    <string name="text_ubah_profile">Ubah Profile</string>
    <string name="hint_nama_lengkap">Nama Lengkap</string>
    <string name="text_nama">Nama</string>
    <string name="text_tanggal_lahir">Tanggal Lahir</string>
    <string name="hint_tanggal_lahir_anda">Tanggal Lahir Anda</string>
    <string name="text_nomor_induk_kependudukan">Nomor Induk Kependudukan</string>
    <string name="hint_nomor_induk_kependudukan">NIK</string>
    <string name="hint_email">Contoh: johndoe@gmail.com</string>
    <string name="text_email">Email</string>
    <string name="text_nomor_telepon">Nomor Telepon</string>
    <string name="hint_number_phone">+62</string>
    <string name="btn_simpan">Simpan</string>
    <string name="text_pengaturan_akun">Pengaturan Akun</string>
    <string name="text_tema">Tema</string>
    <string name="text_hapus_akun">Hapus Akun</string>
</resources>