<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.profile.ChangeProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_ubah_profile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="#FFFFFF" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_back"
            android:layout_gravity="start"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_ubah_profile"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:padding="8dp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="18dp"
        tools:src="@drawable/iv_profile"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_ubah_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearanceOverlay="@style/Circular"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_edit_photo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="@id/iv_profile"
        app:layout_constraintEnd_toEndOf="@id/iv_profile"
        app:layout_constraintTop_toTopOf="@id/iv_profile"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_nama"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iv_profile"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:enabled="false"
        android:hint="@string/hint_nama_lengkap"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintTop_toBottomOf="@id/tv_name"/>

    <TextView
        android:id="@+id/tv_born_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_tanggal_lahir"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/et_name"/>

    <EditText
        android:id="@+id/et_born_date"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:paddingEnd="48dp"
        android:enabled="false"
        android:hint="@string/hint_tanggal_lahir_anda"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintTop_toBottomOf="@id/tv_born_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_calendar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_calendar"
        app:layout_constraintEnd_toEndOf="@id/et_born_date"
        app:layout_constraintTop_toTopOf="@id/et_born_date"
        app:layout_constraintBottom_toBottomOf="@id/et_born_date"/>

    <TextView
        android:id="@+id/tv_NIK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_nomor_induk_kependudukan"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/et_born_date"/>

    <EditText
        android:id="@+id/et_NIK"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:enabled="false"
        android:hint="@string/hint_nomor_induk_kependudukan"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintTop_toBottomOf="@id/tv_NIK"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_email"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/et_NIK"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:enabled="false"
        android:hint="@string/hint_email"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintTop_toBottomOf="@id/tv_email"/>

    <TextView
        android:id="@+id/tv_number_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_nomor_telepon"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/et_email"/>

    <EditText
        android:id="@+id/et_number_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:enabled="false"
        android:hint="@string/hint_number_phone"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintTop_toBottomOf="@id/tv_number_phone"/>

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_simpan"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_button"
        app:layout_constraintTop_toBottomOf="@id/et_number_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>