<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_bg_banner_profile"
        android:layout_width="match_parent"
        android:layout_height="182dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_account_banner"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_account"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/tv_account"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        tools:src="@drawable/iv_profile"
        app:layout_constraintTop_toBottomOf="@+id/tv_account"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/Circular"/>

    <TextView
        android:id="@+id/tv_name_profile"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/iv_bg_banner_profile"
        app:layout_constraintStart_toEndOf="@id/iv_profile"
        app:layout_constraintTop_toBottomOf="@id/iv_bg_banner_profile"
        app:layout_constraintTop_toTopOf="@id/iv_bg_banner_profile"
        tools:text="Jos Creative" />

    <TextView
        android:id="@+id/tv_email_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@id/iv_profile"
        app:layout_constraintTop_toBottomOf="@id/tv_name_profile"
        tools:text="phosphates@gmail.com" />

    <TextView
        android:id="@+id/tv_number_phone_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@id/iv_profile"
        app:layout_constraintTop_toBottomOf="@id/tv_email_profile"
        tools:text="+1 654 785 4462" />

    <LinearLayout
        android:id="@+id/ll_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/iv_bg_banner_profile"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_edit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_edit" />

        <TextView
            android:id="@+id/tv_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/text_edit_profile" />
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/underline"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintTop_toBottomOf="@id/ll_edit_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_settings_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_edit_profile"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_settings_account"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_settings" />

        <TextView
            android:id="@+id/tv_settings_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/text_settings_account" />
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:background="@color/underline"
        app:layout_constraintTop_toBottomOf="@id/ll_settings_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_settings_account"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_logout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_logout" />

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/text_logout" />
    </LinearLayout>

    <TextView
        android:id="@+id/version_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_version"
        android:textSize="14sp"
        android:textColor="@color/grey"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@id/ll_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
